# GreenGraph

./: .gitignore  README.md  mkdocs.yaml  pyproject.toml
.github/workflows/: publish_pypi.yml  publish_testpypi.yml
archive/: mermaid.md
dev/: imports.py
dev/customclasses/: customgraph.py
dev/import/: dev_ecoinvent.py  ecoinvent.py
dev/visualizations/: bw_performance_comparison.py  closeness.py  datashader.py  pymrio_performance_comparison.py
docs/: 404.md  _requirements.txt  about.md  index.md  related.md
docs/_overrides/: 404.html
docs/api/: core.md  ecograph.md  greengraph.md
docs/api/import/: impact_world_plus.md
docs/api/importers/: impact_world_plus.md
docs/api/importers/characterization/: generic.md  iwp.md
docs/api/math/: graph.md  matrix.md
docs/api/utility/: graph.md
docs/architecture/: overview.md
docs/practice/: gettingstarted.md  graph.md  io.md
docs/structure/: ecograph.md
docs/theory/: graph.md  notation.md
ecograph/core/: ecograph.py  graph.py
ecograph/data/: __init__.py
ecograph/import/characterization/: impact_world_plus.py
ecograph/import/databases/: exiobase.py  generic.py  tmp.py
ecograph/importers/characterization/: impact_world_plus.py  out.xlsx
ecograph/importers/databases/: ecoinvent.py  exiobase.py  generic.py
ecograph/math/: conversion.py  matrix.py
ecograph/utility/: logging.py
greengraph/: __init__.py  core.py
greengraph/core/: greengraph.py
greengraph/importers/characterization/: ecoinvent.py  generic.py  impact_world_plus.py
greengraph/importers/concordance/: ecoinvent_exiobase.py
greengraph/importers/databases/: ecoinvent.py  exiobase.py  generic.py  inputoutput.py  useeio.py
greengraph/math/: __init__.py  conversion.py  graph.py  matrix.py
greengraph/utility/: data.py  download.py  graph.py  logging.py
tests/: test_core.py  test_graph.py  test_math_matrix.py
tests/fixtures/: graphs.py  import.py  matrices.py
tests/math/: test_math_matrix.py
tests/utility/: test_download.py  test_graph.py
(+5 files in other folders)
