[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ecograph"
authors = [
  { name="Michael Weinold", email="michaelphilippweinold+ecograph@gmail.com" }
]
maintainers = [
  { name="Michael Weinold", email="michaelphilippweinold+ecograph@gmail.com" }
]
description = "A Python package for graph/matrix-based (hybrid) life-cycle calculations."
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]
# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "numpy",
    "networkx",
    "xarray",
]

[project.urls]
source = "https://github.com/michaelweinold/ecograph"
homepage = "https://ecograph.readthedocs.io"
tracker = "https://github.com/michaelweinold/ecograph"

[project.optional-dependencies]
# Getting recursive dependencies to work is a pain, this
# seems to work, at least for now
testing = [
    "pytest",
    "pytest-cov",
    "python-coveralls",
]

[tool.setuptools]
include-package-data = true
packages = [
  "ecograph",
  "ecograph.core",
  "ecograph.import",
  "ecograph.import.characterization",
  "ecograph.import.databases",
]

[options.packages.find]
where = ["ecograph"]

[options.package_data]
ecograph = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "ecograph.__version__"} 
readme = {file = "README.md"}

[tool.pytest.ini_options]
testpaths = ["tests/*.py"] 